--- a/app.json
+++ b/app.json
@@ -7,8 +7,8 @@
   "description": "",
   "privacyStatement": "",
   "EULA": "",
-  "help": "",
-  "url": "",
+  "help": "https://github.com/VictorCorell/DBTR_D365BC-JPPOL",
+  "url": "https://github.com/VictorCorell/DBTR_D365BC-JPPOL",
   "logo": "",
   "dependencies": [
     {
